k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vtt-maps-gateway
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "PLACEHOLDER.com"
      tls:
        mode: SIMPLE
        credentialName: "PLACEHOLDER"
